test/golden96/{helloCL_s}.1094067961907256370.golden

INITIALPATH:7:30: error:
    • String type is incompatible with grouping (_ or ,).
    • In the quasi-quotation: [fmt|{hello:_s}|]
  |
7 | main = putStrLn [fmt|{hello:_s}|]
  |                              ^
